# devicehub

./: .dockerignore  .editorconfig  .eslintignore  .eslintrc  .gitattributes  .gitignore  .npmignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.ru.md  TESTING.md  additional.md  build.sh  docker-compose-api-tests.yaml  docker-compose-dev.yaml  docker-compose-e2e-tests.yaml  docker-compose-macos.yaml  docker-compose-prod.yaml  docker-compose-separate.yaml  docker-compose-test.yaml  docker-separate-nginx.yaml  errorModal.ts  eslint.config.js  gulpfile.js  mongo.md  mongo.sh  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.typecheck.json  units.md  webpack.config.cjs  webpack.config.js
.github/: CODEOWNERS  (+1 more)
test/api/: Dockerfile  clean_common_devices.py  conftest.py  justfile  openapi-gen-config.yaml  pyproject.toml  test_auth_middleware.py  test_autotest.py  test_devices.py  test_groups.py  test_teams.py  test_users.py
test/api/auth/: test_auth_middleware.py
test/api/autotests/: test_autotest.py
test/api/devicehub_client/: README.md  pyproject.toml
test/api/devices/: test_device_list.py  test_device_serial.py
test/api/groups/: test_group_device_management.py  test_group_devices_endpoint.py  test_group_lifecycle_management.py  test_group_list_endpoint.py  test_single_group_device.py
test/api/smartphone-test-farm-client/: README.md  pyproject.toml
test/api/teams/: test_teams.py
test/api/users/: test_service_user.py  test_user_alert_message.py  test_user_by_email.py  test_user_lifecycle_management.py  test_user_list.py
(+1904 files in other folders)
